@startuml

title __WEB's Class Diagram__\n

  namespace com.mourosub.web {
    class com.mourosub.web.DataLoader {
        + DataLoader()
        + run()
    }
  }
  

  namespace com.mourosub.web {
    class com.mourosub.web.WebApplication {
        {static} + main()
    }
  }
  

  com.mourosub.web.DataLoader .up.|> org.springframework.boot.CommandLineRunner
  com.mourosub.web.DataLoader o-- com.mourosub.web.repository.InstructorRepository : instructorRepo
  com.mourosub.web.DataLoader o-- com.mourosub.web.repository.ReservaRepository : reservaRepo
  com.mourosub.web.DataLoader o-- com.mourosub.web.repository.UsuarioRepository : usuarioRepo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
